[tool.poetry]
name = "poetry_record_bug_demo"
version = "0.1.0"
description = "Demo of bug in poetry when writing wheel RECORD files if some file in the package has a comma in its name."
authors = ["Andy Gimblett <andy@barefootcode.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
